style: splash view

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     
     <!-- PWA 관련 메타 태그 -->
     <meta name="description" content="지역 기반 번개모임 커뮤니티. 미션을 수행하고 포인트를 획득해보세요." />
-    <meta name="theme-color" content="#000000" />
-    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Halsaram" />
     <meta name="mobile-web-app-capable" content="yes" />
     
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body style="background-color: #000000;">
+  <body style="background-color: var(--body-bg, #ffffff);">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
