--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Halsaram — 번개모임 커뮤니티</title>
+    <title>할사람? — 번개모임 커뮤니티</title>
     
     <!-- PWA 관련 메타 태그 -->
     <meta name="description" content="지역 기반 번개모임 커뮤니티. 미션을 수행하고 포인트를 획득해보세요." />
