chore: update api url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Halsaram" />
+    <meta name="apple-mobile-web-app-title" content="할사람" />
     <meta name="mobile-web-app-capable" content="yes" />
     
     <!-- Safari 특별 설정 -->
