fix: push notification

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
     
+    <!-- iOS Safari PWA 푸시 알림 지원 -->
+    <link rel="apple-touch-startup-image" href="/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-orientations" content="portrait-any" />
+    
     <!-- 프리로드 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
